<resources>
    <string name="app_name">RXR Network</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_sign_in2">Sign in</string>
    <string name="lbl_email_address">Email address</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_sign_up2">Sign up</string>
    <string name="lbl_or">Or</string>
    <string name="msg_don_t_have_any2">Don\u2019t Have any Account, </string>
    <string name="msg_don_t_have_any">Don\u2019t Have any Account, Sign Up</string>
    <string name="msg_already_have_ac2">Already Have Account, </string>
    <string name="msg_already_have_ac">Already Have Account, Sign In</string>
    <string name="lbl_hourly">Hourly </string>
    <string name="lbl_2_5_h">+4.5 /h </string>
    <string name="lbl_start">Start</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_500"> 500</string>
    <string name="lbl_0">0</string>
    <string name="lbl_rxr_network">RXR Network</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_invite">Invite</string>
    <string name="lbl_bonus">Bonus</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_whitepaper">WhitePaper</string>
    <string name="lbl_kyc">Kyc</string>
    <string name="lbl_roadmap">Roadmap</string>
    <string name="server_client_id">600218617565-oni016ig3jl7c915nf4ntvanj9sscikn.apps.googleusercontent.com</string>
</resources>