<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAndroidSmall"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        style="@style/groupStylewhite_A700"
        tools:context=".RegisterAndLogin.Register">
        <ImageView android:id="@+id/imageClippathgroup"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_83pxh"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="@dimen/_164pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_clippathgroup_83x164"
            tools:ignore="ContentDescription" tools:src="@drawable/img_clippathgroup_83x164"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_sign_up"
            style="@style/txtIntersemibold32" tools:text="@string/lbl_sign_up"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_100cornerRadius">
            <FrameLayout android:id="@+id/frameStackmail"
                android:layout_height="@dimen/_48pxv"
                android:layout_width="@dimen/_65pxh" style="@style/groupStylelime_100_bfcornerRadius">
                <ImageView android:id="@+id/imageMail"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_mail"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_mail"/>
            </FrameLayout>
            <EditText
                android:textColorHint="@color/black_900_59"
                android:ellipsize="end"
                android:id="@+id/txtEmailaddress"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="@dimen/_5pxv"
                android:layout_margin="@dimen/_5pxv"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:hint="@string/lbl_email_address"
                style="@style/txtPoppinsregular16" tools:text="@string/lbl_email_address"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlock"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_100cornerRadius">
            <FrameLayout android:id="@+id/frameStacklock"
                android:layout_height="@dimen/_48pxv"
                android:layout_width="@dimen/_65pxh" style="@style/groupStylelime_100_bfcornerRadius">
                <ImageView android:id="@+id/imageLock"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_lock"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_lock"/>
            </FrameLayout>
            <EditText
                android:textColorHint="@color/black_900_59"
                android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="@dimen/_5pxv"
                android:layout_margin="@dimen/_5pxv"
                android:background="@null"
                android:inputType="numberPassword"
                android:hint="@string/lbl_password"
                android:minEms="6"
                style="@style/txtPoppinsregular16" tools:text="@string/lbl_password"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlockOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_100cornerRadius">
            <FrameLayout android:id="@+id/frameStacklockOne"
                android:layout_height="@dimen/_48pxv"
                android:layout_width="@dimen/_65pxh" style="@style/groupStylelime_100_bfcornerRadius">
                <ImageView android:id="@+id/imageLockOne"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_lock"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_lock"/>
            </FrameLayout>
            <EditText
                android:textColorHint="@color/black_900_59"
                android:ellipsize="end"
                android:id="@+id/txtConfirmPasswor"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:hint="@string/msg_confirm_passwor"
                android:padding="@dimen/_5pxv"
                android:layout_margin="@dimen/_5pxv"
                android:background="@null"
                android:inputType="numberPassword"
                style="@style/txtPoppinsregular16" tools:text="@string/msg_confirm_passwor"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:visibility="gone"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUpOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up2"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up2"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowlinetwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/black_900"
                android:id="@+id/lineLineTwo"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOr"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_weight="0.07" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_or"
                style="@style/txtPoppinsregular14_1" tools:text="@string/lbl_or"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
        </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_31pxh"
        android:layout_marginStart="@dimen/_31pxh"
        android:layout_marginTop="@dimen/_5pxv"
        android:visibility="gone"
        />
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnvolume1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylelime_100_bfcornerRadius">

            <ImageButton
                android:id="@+id/btnVolume"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30pxh"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_9pxv"
                android:background="@color/white_A700_8e"
                android:paddingHorizontal="@dimen/_2pxh"
                android:paddingVertical="@dimen/_2pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_volume"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtAlreadyHaveAc"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_already_have_ac"
            style="@style/txtPoppinsregular14_1" tools:text="@string/msg_already_have_ac"/>
    </LinearLayout>
